[virtualenvs]
in-project = true

[tool.poetry]
name = "install-release"
version = "0.2.8"
readme = "README.md"
description = "A cli tool to install tools based on your device info directly from github releases and keep them updated."
authors = ["Rishang <rishangbhavsarcs@gmail.com>"]
packages = [
  { include = "InstallRelease" }
]
homepage = "https://github.com/Rishang/install-releases"
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rich = "*"
requests = "*"
python-magic = "^0.4.27"
typer = ">=0.7.0,<0.8.0"

[tool.poetry.scripts]
install-release = "InstallRelease.cli:app"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mypy = "*"
black = "*"
types-requests = "*"
toml = "*"
types-toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
