[virtualenvs]
in-project = true

[tool.poetry]
name = "install-release"
version = "0.5.0"
readme = "README.md"
description = "Simple package manager to easily install, update and manage any command-line(CLI) tool directly from github releases"
authors = ["Rishang <rishangbhavsarcs@gmail.com>"]
packages = [{ include = "InstallRelease" }]
homepage = "https://github.com/Rishang/install-release"
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rich = "*"
requests = "*"
python-magic = "^0.4.27"
typer = "^0.16.0"

[tool.poetry.scripts]
install-release = "InstallRelease.cli:app"
ir = "InstallRelease.cli:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pytest = "^7.2"
mypy = "*"
black = "*"
types-requests = "*"
toml = "*"
types-toml = "*"
types-setuptools = "*"
# pyinstaller = "6.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
